# relative-value-of-prediction

./: .gitignore  README.html  README.md  pyproject.toml  requirements.txt
examples/folktables-income/: folktables-income.ipynb
examples/poverty-targeting/: poverty-targeting-preprocessing-and-model.ipynb  poverty-targeting.ipynb
examples/unemployment-targeting/: employment-office.html  employment-office.ipynb
rvp/: __init__.py  data.py  problem.py
rvp/comparison/: __init__.py  budget_optimization.py  equivalent_cost.py  residual_benefit_optimization.py  two_lever_comparison.py  welfare_curve.py  welfare_difference.py  welfare_heatmap.py
rvp/constraints/: __init__.py  base.py  coverage.py
rvp/levers/: __init__.py  base.py  crra_benefit.py  data_labeling.py  expand_coverage.py  partitioned_utility_lever.py  prediction_improvement.py
rvp/policies/: __init__.py  base.py  ranking.py
rvp/utilities/: __init__.py  base.py  crra.py  partitioned.py
tests/: test_comparison.py  test_constraints.py  test_levers.py  test_policies.py  test_problem.py  test_utilities.py
