[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rvp"
version = "0.1.0"
description = "Evaluate the value of prediction for guiding the allocation of scarce resources."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "scikit-learn",
    "folktables",
    "pytest",
]

[tool.setuptools.packages.find]
include = ["rvp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
